<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tents_background"
    tools:context=".ManualDashboardActivity">

    <Button
        android:id="@+id/btn_manual_section2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:clickable="false"
        android:contextClickable="false"
        android:drawableLeft="@drawable/manual"
        android:drawablePadding="10dp"
        android:text="@string/manual_section"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar7"
        app:layout_constraintVertical_bias="0.003" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8B1D2B"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:background="@drawable/title" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@drawable/back_btn_white" />

    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/btn_medicine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:background="@null"
        android:drawableLeft="@drawable/medicine"
        android:drawablePadding="10dp"
        android:text="@string/manual_dashboard_medicine"
        app:layout_constraintBottom_toTopOf="@+id/btn_clothing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_songs"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_fire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:background="@null"
        android:drawableLeft="@drawable/fire"
        android:drawablePadding="10dp"
        android:text="@string/manual_dashboard_cooking"
        app:layout_constraintBottom_toTopOf="@+id/btn_carpet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_clothing"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_carpet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:background="@null"
        android:drawableLeft="@drawable/carpet"
        android:drawablePadding="10dp"
        android:text="@string/manual_dashboard_handcrafting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_fire"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_songs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:background="@null"
        android:drawableLeft="@drawable/poems"
        android:drawablePadding="10dp"
        android:text="@string/manual_dashboard_songs"
        app:layout_constraintBottom_toTopOf="@+id/btn_medicine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_manual_section2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_clothing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:background="@null"
        android:drawableLeft="@drawable/tattoing"
        android:drawablePadding="10dp"
        android:text="@string/manual_dashboard_clothing"
        app:layout_constraintBottom_toTopOf="@+id/btn_fire"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_medicine"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>